Center the badge text, just in case

--- a/app/src/main/res/layout/embark_select_action_item.xml
+++ b/app/src/main/res/layout/embark_select_action_item.xml
@@ -25,6 +25,7 @@
             android:visibility="gone"
             tools:visibility="visible"
             android:textAppearance="?textAppearanceCaption"
+            android:textAlignment="center"
             android:id="@+id/badge"
             tools:text="Most popular" />
 
