--- a/app/src/main/res/values/colors_light.xml
+++ b/app/src/main/res/values/colors_light.xml
@@ -11,7 +11,7 @@
     <item name="colorOnSurface" type="color">@color/colorPrimary</item>
     <item name="colorSurfaceOnSurface" type="color">#EAEAEA</item>
     <item name="colorSecondary" type="color">@color/lavender_300</item>
-    <item name="colorOnSecondary" type="color">@color/hedvig_white</item>
+    <item name="colorOnSecondary" type="color">@color/hedvig_black</item>
     <item name="colorPlaceholder" type="color">#57121212</item>
     <item name="colorWarning" type="color">#fae098</item>
 
