--- a/app/src/main/res/layout/change_address_pending_change_card.xml
+++ b/app/src/main/res/layout/change_address_pending_change_card.xml
@@ -7,7 +7,8 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/base_margin_double"
     android:layout_marginHorizontal="@dimen/base_margin_double"
-    android:theme="@style/ThemeOverlay.Hedvig.InfoCard">
+    android:theme="@style/ThemeOverlay.Hedvig.InfoCard"
+    style="@style/Hedvig.Theme.InfoCard">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
