--- a/app/src/main/res/values/text_themes.xml
+++ b/app/src/main/res/values/text_themes.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="Hedvig.TextAppearance.Body1" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="fontFamily">@font/hedvigbeta_sans</item>
+        <item name="android:fontFamily">@font/hedvigbeta_sans</item>
         <item name="lineHeight">26sp</item>
         <item name="android:letterSpacing">0</item>
     </style>
@@ -11,16 +13,22 @@
     <dimen name="body_1_placeholder_line_space">8sp</dimen>
 
     <style name="Hedvig.TextAppearance.Body2" parent="TextAppearance.MaterialComponents.Body2">
+        <item name="fontFamily">@font/hedvigbeta_sans</item>
+        <item name="android:fontFamily">@font/hedvigbeta_sans</item>
         <item name="lineHeight">22sp</item>
         <item name="android:letterSpacing">0</item>
     </style>
 
     <style name="Hedvig.TextAppearance.Subtitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
+        <item name="fontFamily">@font/hedvigbeta_sans</item>
+        <item name="android:fontFamily">@font/hedvigbeta_sans</item>
         <item name="android:textColor">?android:textColorSecondary</item>
         <item name="lineHeight">24sp</item>
     </style>
 
     <style name="Hedvig.TextAppearance.Subtitle2" parent="TextAppearance.MaterialComponents.Subtitle2">
+        <item name="fontFamily">@font/hedvigbeta_sans</item>
+        <item name="android:fontFamily">@font/hedvigbeta_sans</item>
         <item name="lineHeight">20sp</item>
         <item name="android:textColor">?android:textColorSecondary</item>
     </style>
@@ -29,15 +37,21 @@
     <dimen name="subtitle_1_placeholder_height">16sp</dimen>
 
     <style name="Hedvig.TextAppearance.Headline3" parent="TextAppearance.MaterialComponents.Headline3">
+        <item name="fontFamily">@font/hedvigbeta_serifbook</item>
+        <item name="android:fontFamily">@font/hedvigbeta_serifbook</item>
         <item name="android:letterSpacing">-0.05</item>
     </style>
 
     <style name="Hedvig.TextAppearance.Headline4" parent="TextAppearance.MaterialComponents.Headline4">
+        <item name="fontFamily">@font/hedvigbeta_serifbook</item>
+        <item name="android:fontFamily">@font/hedvigbeta_serifbook</item>
         <item name="lineHeight">41sp</item>
         <item name="android:letterSpacing">-0.025</item>
     </style>
 
     <style name="Hedvig.TextAppearance.Headline5" parent="TextAppearance.MaterialComponents.Headline5">
+        <item name="fontFamily">@font/hedvigbeta_serifbook</item>
+        <item name="android:fontFamily">@font/hedvigbeta_serifbook</item>
         <item name="lineHeight">32sp</item>
         <item name="android:textColor">?android:textColorSecondary</item>
         <item name="android:letterSpacing">0</item>
@@ -47,12 +61,16 @@
     <dimen name="headline_5_placeholder_height">24sp</dimen>
 
     <style name="Hedvig.TextAppearance.Headline6" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="fontFamily">@font/hedvigbeta_serifbook</item>
+        <item name="android:fontFamily">@font/hedvigbeta_serifbook</item>
         <item name="lineHeight">26sp</item>
         <item name="android:textColor">?android:textColorSecondary</item>
         <item name="android:letterSpacing">0</item>
     </style>
 
     <style name="Hedvig.TextAppearance.Button" parent="TextAppearance.MaterialComponents.Button">
+        <item name="fontFamily">@font/hedvigbeta_sans</item>
+        <item name="android:fontFamily">@font/hedvigbeta_sans</item>
         <item name="lineHeight">24sp</item>
         <item name="android:textSize">17sp</item>
         <item name="android:textAllCaps">false</item>
@@ -60,12 +78,16 @@
     </style>
 
     <style name="Hedvig.TextAppearance.Caption" parent="TextAppearance.MaterialComponents.Caption">
+        <item name="fontFamily">@font/hedvigbeta_sans</item>
+        <item name="android:fontFamily">@font/hedvigbeta_sans</item>
         <item name="lineHeight">16sp</item>
         <item name="android:letterSpacing">0</item>
         <item name="android:textColor">?android:textColorTertiary</item>
     </style>
 
     <style name="Hedvig.TextAppearance.Discount" parent="TextAppearance.MaterialComponents.Caption">
+        <item name="fontFamily">@font/hedvigbeta_sans</item>
+        <item name="android:fontFamily">@font/hedvigbeta_sans</item>
         <item name="lineHeight">16sp</item>
         <item name="android:letterSpacing">0.1</item>
         <item name="android:textColor">?android:textColorSecondary</item>
@@ -73,6 +95,8 @@
 
 
     <style name="Hedvig.TextAppearance.Overline" parent="TextAppearance.MaterialComponents.Overline">
+        <item name="fontFamily">@font/hedvigbeta_sans</item>
+        <item name="android:fontFamily">@font/hedvigbeta_sans</item>
         <item name="lineHeight">16sp</item>
         <item name="android:letterSpacing">0.05</item>
     </style>
