--- a/app/src/main/res/values/colors_light.xml
+++ b/app/src/main/res/values/colors_light.xml
@@ -7,6 +7,7 @@
     <item name="colorOnPrimary" type="color">@color/hedvig_white</item>
     <item name="colorPrimaryVariant" type="color">@color/hedvig_dark_gray</item>
     <item name="colorBackground" type="color">#F6F6F6</item>
+    <item name="colorOnBackground" type="color">@color/hedvig_black</item>
     <item name="colorSurface" type="color">@color/hedvig_white</item>
     <item name="colorOnSurface" type="color">@color/colorPrimary</item>
     <item name="colorSurfaceOnSurface" type="color">#EAEAEA</item>
