--- a/app/src/main/res/layout/bottom_sheet_explanation.xml
+++ b/app/src/main/res/layout/bottom_sheet_explanation.xml
@@ -18,12 +18,13 @@
         android:src="@drawable/bottom_sheet_handle" />
 
     <TextView
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/base_margin"
         android:layout_marginBottom="@dimen/base_margin"
-        android:text="@string/CHARITY_INFO_DIALOG_TITLE"
+        tools:text="@string/CHARITY_INFO_DIALOG_TITLE"
         android:textAppearance="?textAppearanceSubtitle1" />
 
     <TextView
