--- a/app/src/main/res/layout/fragment_referrals.xml
+++ b/app/src/main/res/layout/fragment_referrals.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
-            android:paddingTop="?actionBarSize"
+            android:paddingTop="100dp"
             android:paddingBottom="@dimen/base_margin_quintuple"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:itemCount="3"
