Convenience tooling xml attribute

--- a/app/src/main/res/layout/fragment_embark_address_auto_complete_action.xml
+++ b/app/src/main/res/layout/fragment_embark_address_auto_complete_action.xml
@@ -42,6 +42,7 @@
         app:layout_constraintBottom_toTopOf="@id/textActionSubmit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        tools:background="#ffffff"
         tools:layout_height="60dp" />
 
     <Button
