--- a/app/src/main/res/layout/fragment_embark_address_auto_complete_action.xml
+++ b/app/src/main/res/layout/fragment_embark_address_auto_complete_action.xml
@@ -51,6 +51,7 @@
         android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="Continue" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
